--- a/src/components/common/Search/SearchBar.module.css
+++ b/src/components/common/Search/SearchBar.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 50px;
   border: 1px solid #32353b;
-  background-color: #1d1e22;
+  background-color: #1a1b1b66;
   border-radius: 25px;
   display: flex;
   align-items: center;
